// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option java_multiple_files = true;
option java_package = "io.grpc.examples.document";
option java_outer_classname = "DocumentProto";
option objc_class_prefix = "HLW";

package document;

// The user service definition.
service Document {

  rpc createDocument (CreateDocumentRequest) returns (CreateDocumentResponse) {}

  rpc findDocumentById (FindDocumentByIdRequest) returns (findDocumentByIdResponse) {}

  rpc findAllDocuments(FindDocumentsRequest) returns (ReadDocumentsResponse) {}

  rpc findAllDocumentsWithAcessShortcut(FindDocumentsRequest) returns (ReadDocumentsResponse) {}

}
message NotesByDocument {
  string id = 1;
  string title = 2;
  string text = 3;
  bool beingEdited = 4;
  string userWhoIsEditing = 5;
  string idDocument = 6;
}


message DocumentById {
  string id = 1;
  string title = 2;
  string latestUpdate = 3; //mudar esse type 
  string author = 4;
  repeated string acess = 5;
}

message FindDocumentByIdRequest {
  string userAuth = 1;
  string id = 2;
  
}

message findDocumentByIdResponse{
  DocumentById document = 1;
  repeated NotesByDocument notes =2;
  string message = 3;
  string errorMessage = 4;
}

message CreateDocumentRequest {
  string userAuth = 1;
  string title = 2;
  
}

message CreateDocumentResponse {
  string message = 1;
  string errorMessage = 2;
  
}

message ReadDocumentResponse {
  string id = 1;
  string title = 2;
  string latestUpdate = 3;
  string author = 4;
  repeated string acess = 5;
}

message ReadDocumentsResponse {
  repeated ReadDocumentResponse documents = 1;
}

message FindDocumentsRequest{
  string test = 1;
}
